# MEPLS

./: LICENSE  README.md
doc/: DoxygenLayout.xml  background.md  customdoxygen.css  documentation.md  features.md  footer.html  gallery.md  generate_doxygen.conf  header.html  how_to_build_it.md  main.md  references.bib  structure.md  tutorial.md
doc/tutorial/: step1.md  step2.md  step3.md  step4.md  step5.md
gallery/espci/: CMakeLists.txt  espci.h  main.cc
gallery/espci/python/: run_and_process_stationary.ipynb  run_and_process_transient.ipynb  stationary_state_opt.cfg
inc/: cmdparser.hpp
inc/mepls/: dynamics.h  element.h  event.h  history.h  patches.h  slip.h  snapshot.h  solver.h  solver_impl.h  system.h  utils.h
models/common/: cmdparser.hpp
models/espci/: CMakeLists.txt  espci.h  main.cc
models/example/: example.h  main.cc
python/: animate.py
test/: CMakeLists.txt  main.cc
tutorial/inc/: example.h
tutorial/step1/: CMakeLists.txt  step_1.cc
tutorial/step2/: CMakeLists.txt  step_2.cc
tutorial/step3/: CMakeLists.txt  plot.py  step_3.cc
tutorial/step4/: CMakeLists.txt  step_4.cc
tutorial/step5/: CMakeLists.txt  step_5.cc
